<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.13">
  <DUT Name="E_Camera_State" Id="{1f427bb6-b000-49ab-b9fe-b41ba2f3f5a8}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_Camera_State :
(
	//GENERIC
	WAITING_READY		,
	RESET_ERROR			,
	READY				,
	//MANUAL_MODE			:=50, /manual mode not needed.
	ERROR				,
	//SPECIFIC FOR EVERY STATION
	
	TAKING_PICTURE		,
	DONE				,
	RESULTS				
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>